# git-boss

./: .gitignore  AGENTS.md  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  uninstall.ps1  uninstall.sh  vite.config.ts
scripts/: doctor.ps1  doctor.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: git.rs  instance.rs  lib.rs  main.rs  models.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
src/lib/: api.ts  types.ts  utils.ts
