[package]
name = "gitboss"
version = "0.1.0"
description = "A focused Git staging and commit desktop tool."
authors = ["GitBoss"]
edition = "2021"

[lib]
name = "gitboss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.5", features = [] }
